<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_navigation_title"
        android:key="pref_navigation_settings">

        <CheckBoxPreference
            android:key="@string/pref_bus_key"
            android:title="@string/pref_bus"
            android:summary="@string/pref_bus_summ"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/pref_tts_key"
            android:title="@string/pref_tts_title"
            android:summary="@string/pref_tts_summ"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/pref_vibrate_key"
            android:title="@string/pref_vibrate_title"
            android:summary="@string/pref_vibrate_summ"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/pref_sortByPopularity"
            android:title="@string/pref_sortByPopularity_title"
            android:summary="@string/pref_sortByPopularity_summ"
            android:defaultValue="true" />


    </PreferenceCategory>


    <!--<ListPreference-->
        <!--android:dependency="pref_sync"-->
        <!--android:key="pref_syncConnectionType"-->
        <!--android:title="@string/pref_syncConnectionType"-->
        <!--android:dialogTitle="@string/pref_syncConnectionType"-->
        <!--android:entries="@array/pref_syncConnectionTypes_entries"-->
        <!--android:entryValues="@array/pref_syncConnectionTypes_values"-->
        <!--android:defaultValue="@string/pref_syncConnectionTypes_default" />-->
</PreferenceScreen>